# overlay-icon-series

./: .gitignore  CMakeLists.txt  README.md
part_1/: CMakeLists.txt  README.md
part_1/src/: image_util.cpp  main.cpp
part_2/: CMakeLists.txt  README.md
part_2/include/: app.h
part_2/include/geom/: point.h  rect.h  size.h
part_2/include/gfx/: color.h  font.h  image.h
part_2/include/ui/: button.h  events.h  image_widget.h  widget.h
part_2/include/util/: image_util.h  win32_util.h
part_2/src/: app.cpp  image_util.cpp  main.cpp  stb_impl.cpp
